# django-email-editor

./: .gitignore  Makefile  manage.py  pyproject.toml  pytest.ini  tox.ini
email_editor/: __init__.py  apps.py  preview.py  settings.py  test_settings.py  test_urls.py  views.py
email_editor/static/email_editor/js/ace/src-min/: ace.js
email_editor/static/email_editor/js/ckeditor5/: package.json  webpack.config.js
email_editor/static/email_editor/js/ckeditor5/src/: ckeditor.js
email_editor/templates/email_editor/: email-preview.html
email_editor/templates/email_editor/js/: ace_editor.html
email_editor/tests/: conftest.py  test_preview.py  test_views.py
test_project/: preview.py
test_project/templates/test_project/: newsletter.html  order_confirmation.html  password_reset.html  welcome_onboarding.html
